--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,6 @@ src/.vs/config/applicationhost.config
 
 # JetBrains Rider's auto generated files
 .idea/
+
+# Environment Variables
+**/appsettings.Local.json
