--- a/src/api/api.csproj
+++ b/src/api/api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
     <ProjectReference Include="..\repo\repo.csproj" />
@@ -21,6 +21,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>049e1a89-d762-4445-b82c-ae79b7aa5120</UserSecretsId>
   </PropertyGroup>
 
 </Project>
