--- a/src/services/services.csproj
+++ b/src/services/services.csproj
@@ -5,6 +5,10 @@
     <ProjectReference Include="..\repo\repo.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
